src/objects/Placement__c.object
<CustomObject>
    <description>Keeps track of placements in tournament</description>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Display the rank</description>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>9th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>11th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tournament__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tournament</label>
        <referenceTo>Tournament__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Placement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tournament__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Placement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>